correcting mistakes on mobile version

--- a/css/index.css
+++ b/css/index.css
@@ -487,12 +487,12 @@ img {
 .nav {
   display: none;
   flex-direction: column;
-  position: relative;
+  position: fixed;
   max-width: 100%;
-  top: 50px;
-  width: 100%;
-  height: 90vh;
-  left: -60px;
+  top: 60px;
+  width: 40%;
+  height: 500px;
+  left: 30%;
   justify-content: center;
   background-color: #d8d8d8;
   border: 4px solid darkgray;
@@ -501,10 +501,15 @@ img {
   /* This set the layer level of the element, it has precendence over initial level of 1*/
 }
 .nav-open {
-  display: flex;
+  display: block;
+  animation: moveIt2 1s 1;
 }
 .nav-close {
-  display: none;
+  display: block;
+  animation: loseIt2 1s 1 forwards;
+}
+.navUl {
+  padding-top: 120px;
 }
 .navLi {
   max-width: 100%;
@@ -515,6 +520,22 @@ img {
   text-align: center;
   padding-bottom: 20px;
   padding-top: 20px;
+}
+@keyframes moveIt2 {
+  0% {
+    top: -500px;
+  }
+  100% {
+    top: 50px;
+  }
+}
+@keyframes loseIt2 {
+  0% {
+    top: 50px;
+  }
+  100% {
+    top: -500px;
+  }
 }
 @media (max-width: 320px) {
   .top-bar {
@@ -537,12 +558,12 @@ img {
   }
   .nav {
     display: none;
-    position: relative;
+    position: fixed;
     max-width: 320px;
     top: 50px;
-    width: 100%;
-    height: 90vh;
-    left: -6.54%;
+    width: 90%;
+    height: 400px;
+    left: 5%;
     justify-content: center;
     background-color: #d8d8d8;
     border: 2px solid darkgray;
@@ -550,20 +571,38 @@ img {
     /* This set the layer level of the element, it has precendence over initial level of 1*/
   }
   .nav-open {
-    display: flex;
+    display: block;
+    animation: moveItMobile 1s 1;
   }
   .nav-close {
-    display: none;
+    display: block;
+    animation: loseItMobile 1s 1 forwards;
   }
   .navLi {
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     padding-bottom: 10px;
     padding-top: 10px;
+  }
+  @keyframes moveItMobile {
+    0% {
+      top: -500px;
+    }
+    100% {
+      top: 50px;
+    }
+  }
+  @keyframes loseItMobile {
+    0% {
+      top: 50px;
+    }
+    100% {
+      top: -500px;
+    }
   }
 }
 .contact {
